# xion-proofkit

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
artifacts/: credential_registry.wasm  issuer_registry.wasm  verifier.wasm
contracts/credential-registry/: Cargo.toml
contracts/credential-registry/examples/: schema.rs
contracts/credential-registry/schema/: credential-registry.json
contracts/credential-registry/schema/raw/: execute.json  instantiate.json  query.json  response_to_admin.json  response_to_is_verified.json  response_to_list_schemas.json  response_to_proof_record.json  response_to_proofs_by_subject.json  response_to_schema.json
contracts/credential-registry/src/: contract.rs  error.rs  state.rs  tests.rs
contracts/issuer-registry/: Cargo.toml
contracts/issuer-registry/examples/: schema.rs
contracts/issuer-registry/schema/: issuer-registry.json
contracts/issuer-registry/schema/raw/: execute.json  query.json  response_to_is_authorized.json  response_to_issuer.json  response_to_list_issuers.json
contracts/issuer-registry/src/: contract.rs  error.rs  state.rs  tests.rs
contracts/verifier/: Cargo.toml
contracts/verifier/examples/: schema.rs
contracts/verifier/schema/: verifier.json
contracts/verifier/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_verification_result.json  response_to_verifications_by_subject.json
contracts/verifier/src/: contract.rs  error.rs  lib.rs  state.rs  tests.rs  verification.rs
sdk/ts/: .npmignore  package-lock.json  package.json  tsconfig.json
sdk/ts/src/: credential-registry.ts  index.ts  issuer-registry.ts  proofkit.ts  types.ts  verifier.ts
sdk/ts/src/__tests__/: cli-helpers.test.ts  types.test.ts
sdk/ts/src/cli/: index.ts  parse.ts
tests/integration/: Cargo.toml
tests/integration/src/: tests.rs
