[package]
name = "credential-registry"
version = "0.1.0"
edition = "2021"
description = "ProofKit credential schema and proof record registry"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
proofkit-types = { workspace = true }

[dev-dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
